// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot if route does not exist 1`] = `""`;

exports[`rendering snapshots should render valid snapshot if route is exact 1`] = `
<BreadcrumbItem
  active={true}
  tag="li"
>
  Test 2 Page
</BreadcrumbItem>
`;

exports[`rendering snapshots should render valid snapshot if route is not exact 1`] = `
<BreadcrumbItem
  tag="li"
>
  <Link
    href="/test/test2"
    replace={false}
    to="/test/test2"
  >
    Test 2 Page
  </Link>
</BreadcrumbItem>
`;
